--- a/src/ui/components/base/input/input.css
+++ b/src/ui/components/base/input/input.css
@@ -121,7 +121,7 @@ input[type=number]::-webkit-inner-spin-button {
         border-bottom-right-radius: 0px !important;
         border: 1px solid #afafaf;
         overflow: hidden;
-        padding-right: 10px;
+        padding-right: 30px;
     }
 
 /* */
@@ -162,6 +162,7 @@ input[type=number]::-webkit-inner-spin-button {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 /*  */
